--- a/app/views/static/ems_cloud/arbitration_profile_edit.html.haml
+++ b/app/views/static/ems_cloud/arbitration_profile_edit.html.haml
@@ -1,105 +1,110 @@
 %form.form-horizontal#form_div{"name" => "angularForm", 'ng-controller' => 'arbitrationProfileFormController'}
-  %div
-    .form-group{"ng-class" => "{'has-error': angularForm.name.$invalid}"}
-      %label.col-md-2.control-label{"for" => "name"}
-        = _("Name")
-      .col-md-8
-        %input.form-control{"type"        => "text",
-                            "id"          => "name",
-                            "name"        => "name",
-                            "ng-model"    => "arbitrationProfileModel.name",
-                            "maxlength"   => 20,
-                            "required"    => "",
-                            "checkchange" => "",
-                            "auto-focus"  => ""}
-        %span.help-block{"ng-show" => "angularForm.name.$error.required"}
-          = _("Required")
-    .form-group{"ng-class" => "{'has-error': angularForm.description.$invalid}"}
-      %label.col-md-2.control-label{"for" => "description"}
-        = _("Description")
-      .col-md-8
-        %input.form-control{"type"        => "text",
-                            "id"          => "description",
-                            "name"        => "description",
-                            "ng-model"    => "arbitrationProfileModel.description",
-                            "maxlength"   => 50,
-                            "required"    => "",
-                            "checkchange" => ""}
-        %span.help-block{"ng-show" => "angularForm.description.$error.required"}
-          = _("Required")
-    .form-group
-      %label.col-md-2.control-label{"for" => "authentication_id"}
-        = _('Key Pair')
-      .col-md-8
-        %select{"ng-model"    => "arbitrationProfileModel.authentication_id",
-                "name"        => "authentication_id",
-                "checkchange" => ""}
-          %option{"value" => ""}
-            = "<#{_('Choose')}>"
-          %option{"ng-repeat"   => "authentication in arbitrationProfileModel.authentications track by $index",
-                  "value"       => "{{authentication.id}}"}
-            {{authentication.name}}
-    .form-group
-      %label.col-md-2.control-label{"for" => "availability_zone_id"}
-        = _('Availability Zone')
-      .col-md-8
-        %select{"ng-model"    => "arbitrationProfileModel.availability_zone_id",
-                "name"        => "availability_zone_id",
-                "checkchange" => ""}
-          %option{"value" => ""}
-            = "<#{_('Choose')}>"
-          %option{"ng-repeat"   => "availability_zone in arbitrationProfileModel.availability_zones track by $index",
-                  "value"       => "{{availability_zone.id}}"}
-            {{availability_zone.name}}
-    .form-group
-      %label.col-md-2.control-label{"for" => "flavor_id"}
-        = _('Flavor')
-      .col-md-8
-        %select{"ng-model"    => "arbitrationProfileModel.flavor_id",
-                "name"        => "flavor_id",
-                "checkchange" => ""}
-          %option{"value" => ""}
-            = "<#{_('Choose')}>"
-          %option{"ng-repeat"   => "flavor in arbitrationProfileModel.flavors track by $index",
-                  "value"       => "{{flavor.id}}"}
-            {{flavor.name}}
-    .form-group
-      %label.col-md-2.control-label{"for" => "cloud_network_id"}
-        = _('Cloud Network')
-      .col-md-8
-        %select{"ng-model"    => "arbitrationProfileModel.cloud_network_id",
-                "name"        => "cloud_network_id",
-                "ng-change"   => "cloudNetworkChanged(arbitrationProfileModel.cloud_network_id)",
-                "checkchange" => ""}
-          %option{"value" => ""}
-            = "<#{_('Choose')}>"
-          %option{"ng-repeat"   => "cloud_network in arbitrationProfileModel.cloud_networks track by $index",
-                  "value"       => "{{cloud_network.id}}"}
-            {{cloud_network.name}}
-    .form-group
-      %label.col-md-2.control-label{"for" => "cloud_subnet_id"}
-        = _('Cloud Subnet')
-      .col-md-8
-        %select{"ng-model"    => "arbitrationProfileModel.cloud_subnet_id",
-                "name"        => "cloud_subnet_id",
-                "checkchange" => ""}
-          %option{"value" => ""}
-            = "<#{_('Choose')}>"
-          %option{"ng-repeat"   => "cloud_subnet in arbitrationProfileModel.cloud_subnets track by $index",
-                  "value"       => "{{cloud_subnet.id}}"}
-            {{cloud_subnet.name}}
-    .form-group
-      %label.col-md-2.control-label{"for" => "security_group_id"}
-        = _('Security Group')
-      .col-md-8
-        %select{"ng-model"    => "arbitrationProfileModel.security_group_id",
-                "name"        => "security_group_id",
-                "checkchange" => ""}
-          %option{"value" => ""}
-            = "<#{_('Choose')}>"
-          %option{"ng-repeat"   => "security_group in arbitrationProfileModel.security_groups track by $index",
-                  "value"       => "{{security_group.id}}"}
-            {{security_group.name}}
-    :javascript
-      miqInitSelectPicker();
+  .form-group{"ng-class" => "{'has-error': angularForm.name.$invalid}"}
+    %label.col-md-2.control-label{"for" => "name"}
+      = _("Name")
+    .col-md-8
+      %input.form-control{"type"        => "text",
+                          "id"          => "name",
+                          "name"        => "name",
+                          "ng-model"    => "arbitrationProfileModel.name",
+                          "maxlength"   => 20,
+                          "required"    => "",
+                          "checkchange" => "",
+                          "auto-focus"  => ""}
+      %span.help-block{"ng-show" => "angularForm.name.$error.required"}
+        = _("Required")
+  .form-group{"ng-class" => "{'has-error': angularForm.description.$invalid}"}
+    %label.col-md-2.control-label{"for" => "description"}
+      = _("Description")
+    .col-md-8
+      %input.form-control{"type"        => "text",
+                          "id"          => "description",
+                          "name"        => "description",
+                          "ng-model"    => "arbitrationProfileModel.description",
+                          "maxlength"   => 50,
+                          "required"    => "",
+                          "checkchange" => ""}
+      %span.help-block{"ng-show" => "angularForm.description.$error.required"}
+        = _("Required")
+  .form-group
+    %label.col-md-2.control-label{"for" => "authentication_id"}
+      = _('Key Pair')
+    .col-md-8
+      %select{"ng-model"    => "arbitrationProfileModel.authentication_id",
+              "name"        => "authentication_id",
+              'ng-options'  => 'authentication.id as authentication.name for authentication in arbitrationProfileModel.authentications track by authentication.id',
+              'pf-select'   => true}
+        %option{"value" => ""}
+          = "<#{_('Choose')}>"
+
+      -#%select{"ng-init"     => "arbitrationProfileModel._authentication = {id: arbitrationProfileModel.authentication_id}",
+      -#        "ng-change"   => "arbitrationProfileModel.authentication_id = arbitrationProfileModel._authentication.id",
+      -#        "ng-model"    => "arbitrationProfileModel._authentication",
+      -#        "name"        => "authentication_id",
+      -#        'ng-options'  => 'authentication.id as authentication.name for authentication in arbitrationProfileModel.authentications track by authentication.id',
+      -#        'pf-select'   => true}
+        -#%option{"value" => ""}
+        -#  = "<#{_('Choose')}>"
+
+  .form-group
+    %label.col-md-2.control-label{"for" => "availability_zone_id"}
+      = _('Availability Zone')
+    .col-md-8
+      %select{"ng-model"    => "arbitrationProfileModel.availability_zone_id",
+              "name"        => "availability_zone_id",
+              "ng-options"  => "availability_zone.id as availability_zone.name for availability_zone in arbitrationProfileModel.availability_zones track by availability_zone.id",
+              'pf-select'   => true,
+              "checkchange" => ""}
+        %option{"value" => ""}
+          = "<#{_('Choose')}>"
+
+  .form-group
+    %label.col-md-2.control-label{"for" => "flavor_id"}
+      = _('Flavor')
+    .col-md-8
+      %select{"ng-model"    => "arbitrationProfileModel.flavor_id",
+              "name"        => "flavor_id",
+              "ng-options"  => "flavor.id as flavor.name for flavor in arbitrationProfileModel.flavors track by flavor.id",
+              'pf-select'   => true,
+              "checkchange" => ""}
+        %option{"value" => ""}
+          = "<#{_('Choose')}>"
+
+  .form-group
+    %label.col-md-2.control-label{"for" => "cloud_network_id"}
+      = _('Cloud Network')
+    .col-md-8
+      %select{"ng-model"    => "arbitrationProfileModel.cloud_network_id",
+              "name"        => "cloud_network_id",
+              "ng-change"   => "cloudNetworkChanged(arbitrationProfileModel.cloud_network_id)",
+              "ng-options"  => "cloud_network.id as cloud_network.name for cloud_network in arbitrationProfileModel.cloud_networks track by cloud_network.id",
+              'pf-select'   => true,
+              "checkchange" => ""}
+        %option{"value" => ""}
+          = "<#{_('Choose')}>"
+
+  .form-group
+    %label.col-md-2.control-label{"for" => "cloud_subnet_id"}
+      = _('Cloud Subnet')
+    .col-md-8
+      %select{"ng-model"    => "arbitrationProfileModel.cloud_subnet_id",
+              "name"        => "cloud_subnet_id",
+              "checkchange" => "",
+              "ng-options"  => "cloud_subnet.id as cloud_subnet.name for cloud_subnet in arbitrationProfileModel.cloud_subnets track by cloud_subnet.id",
+              'pf-select'   => true}
+        %option{"value" => ""}
+          = "<#{_('Choose')}>"
+
+  .form-group
+    %label.col-md-2.control-label{"for" => "security_group_id"}
+      = _('Security Group')
+    .col-md-8
+      %select{"ng-model"    => "arbitrationProfileModel.security_group_id",
+              "name"        => "security_group_id",
+              "ng-options"  => "security_group.id as security_group.name for security_group in arbitrationProfileModel.security_groups track by security_group.id",
+              'pf-select'   => true,
+              "checkchange" => ""}
+        %option{"value" => ""}
+          = "<#{_('Choose')}>"
+
   %form-buttons
