--- a/app/views/vm_common/_disassociate_floating_ip.html.haml
+++ b/app/views/vm_common/_disassociate_floating_ip.html.haml
@@ -19,12 +19,12 @@
   %table{:width => '100%'}
     %tr
       %td{:align => 'right'}
-        = button_tag("Submit",
+        = button_tag(_("Submit"),
                      :class        => "btn btn-primary",
                      "ng-click"    => "submitClicked()",
                      "ng-disabled" => "angularForm.$pristine || angularForm.$invalid",
                      "ng-class"    => "{'btn-disabled': angularForm.$pristine || angularForm.$invalid}")
-        = button_tag("Cancel",
+        = button_tag(_("Cancel"),
                       :class     => "btn btn-default",
                       "ng-click" => "cancelClicked()")
 
