--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -527,6 +527,30 @@ body#dashboard {
   overflow: auto;
 }
 
+/* error modal */
+
+.error-modal-miq {
+  &.modal-content,
+  & > .modal-header {
+    background-color: #f2dede;
+    color: #c00;
+  }
+
+  &.modal-content {
+    border-color: red;
+  }
+
+  & .fields { // .product-versions-pf
+    margin-bottom: 30px;
+    margin-top: 30px;
+    li {
+      strong {
+        margin-right: 10px;
+      }
+    }
+  }
+}
+
 /* begin toolbar styling (to be moved to the ui-components repo) */
 
 .toolbar-pf .form-group { /*compensates for filter-pf not being implemented */
