--- a/app/views/cloud_volume/new.html.haml
+++ b/app/views/cloud_volume/new.html.haml
@@ -31,7 +31,7 @@
         = _('Cloud Tenant')
       .col-md-8
         = select_tag("cloud_tenant_id",
-                      options_for_select(@cloud_tenant_choices.sort),
+          options_for_select([["<#{_('Choose')}>", nil]] + @cloud_tenant_choices.sort),
                       "ng-model"                    => "cloudVolumeModel.cloud_tenant_id",
                       "required"                    => "",
                       :miqrequired                  => true,
