Resolve duplicate id issue

--- a/app/assets/stylesheets/patternfly_overrides.scss
+++ b/app/assets/stylesheets/patternfly_overrides.scss
@@ -508,6 +508,11 @@ body#dashboard {
   }
 }
 
+/* custom modal class for Entry Point (creates scrollable area) */
+#automate_treebox {
+  height: 350px !important;
+  overflow-y: auto !important;
+}
 /* scrollable */
 .scrollable {
   overflow: auto;
