--- a/app/views/layouts/_ae_tree_select.html.haml
+++ b/app/views/layouts/_ae_tree_select.html.haml
@@ -1,12 +1,12 @@
 - entry_point ||= "Instance"
-.modal.fade#automate_tree_div{"tabindex"        => "-1",
-                              "role"            => "dialog",
-                              "aria-labelledby" => "ep_modal_label",
-                              "aria-describedby" => "modal",
-                              "aria-hidden"     => "true",
-                              "data-keyboard"   => "false",
-                              "data-backdrop"   => "static",
-                              :style            => "display: none"}
+.modal.fade#automate_div{"tabindex"         => "-1",
+                         "role"             => "dialog",
+                         "aria-labelledby"  => "ep_modal_label",
+                         "aria-describedby" => "modal",
+                         "aria-hidden"      => "true",
+                         "data-keyboard"    => "false",
+                         "data-backdrop"    => "static",
+                         :style             => "display: none"}
   .modal-dialog.modal-lg
     .modal-content
       .modal-header
