Add the `is-guid=4` directive based on the guid_regex conditional

--- a/app/views/layouts/angular-bootstrap/_auth_credentials_angular_bootstrap.html.haml
+++ b/app/views/layouts/angular-bootstrap/_auth_credentials_angular_bootstrap.html.haml
@@ -15,7 +15,7 @@
 - cancel_password_change ||= _("Cancel password change")
 - verify_title_off       ||= _("Server information, Username and matching password fields are needed to perform verification of credentials")
 - ng_show_userid         ||= true
-- guid_regex             ||= ""
+- guid_regex             ||= false
 
 %div{"ng-controller" => "CredentialsController"}
   %div{"ng-show" => "#{ng_show} && #{ng_show_userid}"}
@@ -23,23 +23,24 @@
       %label.col-md-2.control-label{"for" => "#{prefix}_userid"}
         = userid_label
       .col-md-4
-        %input.form-control{"type"                    => "text",
-                            "id"                      => "#{prefix}_userid",
-                            "ng-required"             => "#{ng_reqd_userid}",
-                            "ng-disabled"             => userid_disabled,
-                            "name"                    => "#{prefix}_userid",
-                            "ng-model"                => "#{ng_model}.#{prefix}_userid",
-                            "checkchange"             => "",
-                            "ng-trim"                 => false,
-                            "ng-pattern"              => guid_regex,
-                            "detect_spaces"           => "",
-                            "prefix"                  => "#{prefix}",
-                            "reset-validation-status" => "#{prefix}_auth_status"}
+        - hash_for_userid = {"type"                    => "text",
+                             "id"                      => "#{prefix}_userid",
+                             "ng-required"             => "#{ng_reqd_userid}",
+                             "ng-disabled"             => userid_disabled,
+                             "name"                    => "#{prefix}_userid",
+                             "ng-model"                => "#{ng_model}.#{prefix}_userid",
+                             "checkchange"             => "",
+                             "ng-trim"                 => false,
+                             "detect_spaces"           => "",
+                             "prefix"                  => "#{prefix}",
+                             "reset-validation-status" => "#{prefix}_auth_status"}
+        - hash_for_userid['is-uuid'] = 4 if guid_regex
+        %input.form-control{hash_for_userid}
         %span.help-block{"ng-show" => "angularForm.#{prefix}_userid.$error.required"}
           = _("Required")
         %span.help-block{"ng-show" => "angularForm.#{prefix}_userid.$error.detectedSpaces"}
           = _("Spaces are prohibited")
-        %span.help-block{"ng-show" => "angularForm.#{prefix}_userid.$error.pattern"}
+        %span.help-block{"ng-show" => "angularForm.#{prefix}_userid.$error.isUuid"}
           = _("Invalid input format, please enter a GUID")
         .note
           {{note}}
