Refactor UI AE Class views not to use div_num when rendering flash_msg partial
Delete passing along of div_num as local variable, used by old DHTMLX code base, when rendering layouts/_flash_msg partial view
flash_msg partial will now default to DOM ID of flash_msg_div

https://github.com/ManageIQ/manageiq/issues/11238

--- a/app/views/miq_ae_class/_class_instances.html.haml
+++ b/app/views/miq_ae_class/_class_instances.html.haml
@@ -1,6 +1,6 @@
 #class_instances_div
   - if !@in_a_form
-    = render :partial => "layouts/flash_msg", :locals => {:div_num => "_class_instances"}
+    = render :partial => "layouts/flash_msg"
     %h3= _('Instances')
     - if @record.ae_instances.present?
       %table#class_instances_grid.table.table-striped.table-bordered.table-hover.table-clickable.table-checkable
@@ -31,5 +31,5 @@
                :locals  => {:message => _("No instances found")}
   - elsif @edit[:new][:ae_inst]
     #form_div
-      = render :partial => "layouts/flash_msg", :locals => {:div_num => "_class_instances"}
+      = render :partial => "layouts/flash_msg"
       = render :partial => "instance_form", :locals => {:prefix => "cls_"}
