--- a/app/views/miq_ae_class/_domains_priority_form.html.haml
+++ b/app/views/miq_ae_class/_domains_priority_form.html.haml
@@ -1,4 +1,4 @@
-= render :partial => "layouts/flash_msg", :locals => {:div_num => "_domains_priority"}
+= render :partial => "layouts/flash_msg"
 #domains_list
   %table#formtest.form{:width => '50%'}
     %tr
