--- a/app/views/miq_ae_class/_git_domain_refresh.html.haml
+++ b/app/views/miq_ae_class/_git_domain_refresh.html.haml
@@ -1,4 +1,4 @@
-= render :partial => "layouts/flash_msg", :locals => {:div_num => "_git_refresh"}
+= render :partial => "layouts/flash_msg"
 
 %form#form_div
   = hidden_field_tag(:git_repo_id, @git_repo_id, :class => "hidden-git-repo-id")
