--- a/app/views/miq_ae_class/_method_inputs.html.haml
+++ b/app/views/miq_ae_class/_method_inputs.html.haml
@@ -1,6 +1,6 @@
 #method_inputs_div
   - if !@in_a_form && @ae_method
-    = render :partial => "layouts/flash_msg", :locals => {:div_num => "_method_inputs"}
+    = render :partial => "layouts/flash_msg"
     %h3
       = _('Main Info')
     .form-horizontal.static
@@ -73,6 +73,6 @@
               %td= record.datatype.blank? ? 'string' : record.datatype
   - else
     #method_form_div
-      = render :partial => "layouts/flash_msg", :locals  => {:div_num => "_method_inputs"}
+      = render :partial => "layouts/flash_msg"
       = render :partial => "method_form", :locals  => {:prefix => ""}
   %br
