Hide the VMware MKS console support as it relies on the NPAPI
https://bugzilla.redhat.com/show_bug.cgi?id=1513592

--- a/app/views/ops/_settings_server_tab.html.haml
+++ b/app/views/ops/_settings_server_tab.html.haml
@@ -127,23 +127,11 @@
         = _("Use")
       .col-md-8
         = select_tag('console_type',
-                    options_for_select([[_("VMware MKS Plugin"), "MKS"], [_("VNC"), "VNC"], [_("VMware VMRC Plugin"), "VMRC"]],
+                    options_for_select([[_("VNC"), "VNC"], [_("VMware VMRC Plugin"), "VMRC"]],
                     @edit[:new][:server][:remote_console_type]),
                     :class    => "selectpicker")
       :javascript
         miqSelectPickerEvent('console_type', "#{url}")
-
-    - if @edit[:new][:server][:remote_console_type] == "MKS"
-      .form-group
-        %label.col-md-2.control-label
-          = _("VMware MKS Plugin Version")
-        .col-md-8
-          = select_tag('server_mks_version',
-                        options_for_select(MKS_VERSIONS,
-                        @edit[:new][:server][:mks_version]),
-                        :class    => "selectpicker")
-      :javascript
-        miqSelectPickerEvent('server_mks_version', "#{url}")
   %hr
   %h3
     = _("NTP Servers")
